--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ color-eyre = "0.6.2"
 thiserror = "1.0.43"
 clap = { version = "4.3.11", features = ["derive"] }
 tokio = { version = "1.29.1", features = ["full"] }
-reqwest = { version = "0.11.18", features = ["json"] }
+reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "json"] }
 serde = { version = "1.0.167", features = ["derive"] }
 serde_json = "1.0.100"
 chrono = "0.4.26"
